--- a/scss/components/_um-banner.scss
+++ b/scss/components/_um-banner.scss
@@ -12,7 +12,7 @@
     color:$color-text-main;
 
     background: $color-gradient;
-    background-image: url('img/png/bg-mob.png');
+    background-image: url('../img/png/bg-mob.png');
     background-repeat: no-repeat;
     background-size: 849px 477px;
     background-position: 308px -100px;
@@ -81,7 +81,7 @@
         padding-left:400px;
         padding-bottom: 64px;
 
-        background-image: url('img/png/bg.png');
+        background-image: url('../img/png/bg.png');
         background-repeat: no-repeat;
         background-size: 849px 477px;
         background-position: -365px -44px;
